--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -3,14 +3,14 @@ server:
   port: 8081
 spring:
   application:
-    name: accountService
+    name: account-service
   # Spring Cloud
   cloud:
     consul:
       host: localhost
       port: 8500
       discovery:
-        service-name: accountService
+        service-name: account-service
   # Datasource
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -21,8 +21,10 @@ spring:
     throw-exception-if-no-handler-found: true
   resources:
     add-mappings: false
+  devtools:
+    livereload:
+      port: 35503
 # Mybatis-Config
 mybatis:
   config-location: classpath:mybatis/mybatis-config.xml
   mapper-locations: classpath:mybatis/mapper/**/*.xml
-
