--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -25,6 +25,6 @@ spring:
     livereload:
       port: 35503
 # Mybatis-Config
-mybatis:
+mybatis-plus:
   config-location: classpath:mybatis/mybatis-config.xml
   mapper-locations: classpath:mybatis/mapper/**/*.xml
